[gd_scene load_steps=49 format=3 uid="uid://fy568csmg7xm"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_jtpdw"]
[ext_resource type="Texture2D" uid="uid://d24oc5ucfcuht" path="res://assets/graphic/Sprite-0001.png" id="3_kitwn"]
[ext_resource type="Texture2D" uid="uid://c17t6vc0hivvs" path="res://assets/graphic/ezgif-5-a42ef6f1ff.png" id="4_v7rho"]
[ext_resource type="Texture2D" uid="uid://ceksi6pueo5b3" path="res://assets/graphic/main menu book.png" id="5_pesto"]
[ext_resource type="Texture2D" uid="uid://badlh2i3ssvek" path="res://assets/graphic/menu logo.png" id="7_1xo06"]
[ext_resource type="Theme" uid="uid://vc8iav51k4do" path="res://assets/graphic/pixelTheme.tres" id="7_i63rd"]
[ext_resource type="AudioStream" uid="uid://cy5mxqtqp7pl3" path="res://assets/audio/8-bit-retro-game-music-233964.mp3" id="7_mq7v4"]
[ext_resource type="AudioStream" uid="uid://ce4le5mt4gnto" path="res://assets/audio/pickupCoin.wav" id="8_ufi3m"]
[ext_resource type="Texture2D" uid="uid://bijngkenvjoa1" path="res://assets/graphic/music.png" id="9_nisl7"]
[ext_resource type="Texture2D" uid="uid://cyo2xm7htg6xo" path="res://assets/graphic/mutedMusic.png" id="10_okrwa"]
[ext_resource type="Texture2D" uid="uid://c51hrs71jdeqs" path="res://assets/graphic/sound.png" id="11_pkbmo"]
[ext_resource type="Texture2D" uid="uid://d1qum0eingfps" path="res://assets/graphic/mutedSound.png" id="12_dmk11"]

[sub_resource type="Shader" id="Shader_i8fka"]
code = "shader_type canvas_item;
render_mode blend_mix;

uniform float radius = 9.0;

void vertex() {
	UV.x += TIME * 0.1;
	UV.y += TIME * 0.2;
	// Called for every vertex the material is visible on.
}

void fragment() {
	vec4 col = texture(TEXTURE, UV);
	vec2 ps = TEXTURE_PIXEL_SIZE;

	col += texture(TEXTURE, UV + vec2(0.0, -radius) * ps);
	col += texture(TEXTURE, UV + vec2(0.0, radius) * ps);
	col += texture(TEXTURE, UV + vec2(-radius, 0.0) * ps);
	col += texture(TEXTURE, UV + vec2(radius, 0.0) * ps);
	col /= 5.0;

	COLOR = col;
}

//void light() {
	// Called for every pixel for every light affecting the CanvasItem.
	// Uncomment to replace the default light processing function with this one.
//}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_damc1"]
shader = SubResource("Shader_i8fka")
shader_parameter/radius = 2.0

[sub_resource type="AtlasTexture" id="AtlasTexture_ludw0"]
atlas = ExtResource("4_v7rho")
region = Rect2(0, 0, 800, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_8jc7w"]
atlas = ExtResource("4_v7rho")
region = Rect2(800, 0, 800, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_kinpt"]
atlas = ExtResource("4_v7rho")
region = Rect2(1600, 0, 800, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_3dtrh"]
atlas = ExtResource("4_v7rho")
region = Rect2(2400, 0, 800, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_yrotx"]
atlas = ExtResource("4_v7rho")
region = Rect2(3200, 0, 800, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_escut"]
atlas = ExtResource("4_v7rho")
region = Rect2(0, 600, 800, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8m8n"]
atlas = ExtResource("4_v7rho")
region = Rect2(800, 600, 800, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_6wr78"]
atlas = ExtResource("4_v7rho")
region = Rect2(1600, 600, 800, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_sd8km"]
atlas = ExtResource("4_v7rho")
region = Rect2(2400, 600, 800, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_kt44i"]
atlas = ExtResource("4_v7rho")
region = Rect2(3200, 600, 800, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_si48e"]
atlas = ExtResource("4_v7rho")
region = Rect2(0, 1200, 800, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_vmjs1"]
atlas = ExtResource("4_v7rho")
region = Rect2(800, 1200, 800, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmj6n"]
atlas = ExtResource("4_v7rho")
region = Rect2(1600, 1200, 800, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_4e3bm"]
atlas = ExtResource("4_v7rho")
region = Rect2(2400, 1200, 800, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_3y2sp"]
atlas = ExtResource("4_v7rho")
region = Rect2(3200, 1200, 800, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_8jcup"]
atlas = ExtResource("4_v7rho")
region = Rect2(0, 1800, 800, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_otw8a"]
atlas = ExtResource("4_v7rho")
region = Rect2(800, 1800, 800, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_x4j04"]
atlas = ExtResource("4_v7rho")
region = Rect2(1600, 1800, 800, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_7nh64"]
atlas = ExtResource("4_v7rho")
region = Rect2(2400, 1800, 800, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_3uoma"]
atlas = ExtResource("4_v7rho")
region = Rect2(3200, 1800, 800, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_2rxsm"]
atlas = ExtResource("4_v7rho")
region = Rect2(0, 2400, 800, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_tufhp"]
atlas = ExtResource("4_v7rho")
region = Rect2(800, 2400, 800, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_ojvb2"]
atlas = ExtResource("4_v7rho")
region = Rect2(1600, 2400, 800, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mbob"]
atlas = ExtResource("4_v7rho")
region = Rect2(2400, 2400, 800, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7h1k"]
atlas = ExtResource("4_v7rho")
region = Rect2(3200, 2400, 800, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_ws26w"]
atlas = ExtResource("4_v7rho")
region = Rect2(0, 3000, 800, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_la78k"]
atlas = ExtResource("4_v7rho")
region = Rect2(800, 3000, 800, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_gadvo"]
atlas = ExtResource("4_v7rho")
region = Rect2(1600, 3000, 800, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_jamd5"]
atlas = ExtResource("4_v7rho")
region = Rect2(2400, 3000, 800, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_ewvga"]
atlas = ExtResource("4_v7rho")
region = Rect2(3200, 3000, 800, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_sm664"]
atlas = ExtResource("4_v7rho")
region = Rect2(0, 3600, 800, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_eqaie"]
atlas = ExtResource("4_v7rho")
region = Rect2(800, 3600, 800, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hkxc"]
atlas = ExtResource("4_v7rho")
region = Rect2(1600, 3600, 800, 600)

[sub_resource type="SpriteFrames" id="SpriteFrames_vbadt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ludw0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8jc7w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kinpt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3dtrh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yrotx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_escut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8m8n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6wr78")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sd8km")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kt44i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_si48e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vmjs1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmj6n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4e3bm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3y2sp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8jcup")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otw8a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4j04")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7nh64")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3uoma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2rxsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tufhp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ojvb2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mbob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7h1k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ws26w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_la78k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gadvo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jamd5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewvga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sm664")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eqaie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hkxc")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[node name="mainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jtpdw")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 326.0
offset_bottom = 178.0
color = Color(0.278073, 0.708546, 0.755068, 1)

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 5
texture_repeat = 2
material = SubResource("ShaderMaterial_damc1")
layout_mode = 0
offset_left = -120.0
offset_top = -169.0
offset_right = 483.0
offset_bottom = 343.0
texture = ExtResource("3_kitwn")
expand_mode = 1
stretch_mode = 5
flip_h = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(169, 48)
scale = Vector2(0.0919606, 0.0903125)
sprite_frames = SubResource("SpriteFrames_vbadt")
autoplay = "default"
frame_progress = 0.722184

[node name="Mainmenu" type="Sprite2D" parent="."]
position = Vector2(162, 91)
scale = Vector2(0.185, 0.185)
texture = ExtResource("5_pesto")

[node name="MenuLogo" type="Sprite2D" parent="."]
position = Vector2(163, 91)
scale = Vector2(0.185872, 0.182292)
texture = ExtResource("7_1xo06")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.537
anchor_top = 0.854
anchor_right = 0.537
anchor_bottom = 0.854
offset_left = -49.766
offset_top = -66.72
offset_right = 97.234
offset_bottom = 111.28
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.66, 0.66)
theme = ExtResource("7_i63rd")
theme_override_constants/separation = 9

[node name="New Game" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("7_i63rd")
action_mode = 0
text = "New Game"
flat = true

[node name="Continue" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("7_i63rd")
text = "Continue"
flat = true

[node name="Setting" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("7_i63rd")
text = "Settings"
flat = true

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_mq7v4")
volume_db = -11.995
pitch_scale = 0.69
autoplay = true
playback_type = 1

[node name="ClickSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_ufi3m")
volume_db = -3.08

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 276.0
offset_top = 1.0
offset_right = 381.0
offset_bottom = 51.0
scale = Vector2(0.425, 0.425)

[node name="music" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("9_nisl7")
texture_pressed = ExtResource("10_okrwa")
stretch_mode = 0

[node name="sound" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("11_pkbmo")
texture_pressed = ExtResource("12_dmk11")
stretch_mode = 0

[connection signal="pressed" from="VBoxContainer/New Game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/Setting" to="." method="_on_setting_pressed"]
